[project]
name = "merchant-ledger-payments"
version = "0.1.0"
description = "Merchant ledger and payments service"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "sqlalchemy==2.0.43",
  "psycopg[binary]==3.2.9",
  "alembic==1.16.4",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "confluent-kafka==2.11.0",
  "boto3==1.40.25",
  "python-json-logger==3.2.1",
  "httpx==0.28.1",
]

[dependency-groups]
dev = [
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "testcontainers[postgres]==4.10.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
